corrected footer visibily

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ p {
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #b10a0a;
+    background-color: #2a607c;
     color: #ffffff;
 }
 
@@ -121,13 +121,16 @@ p {
 }
 
 .footer {
-    display: none;
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+.footer h4 {
     font-size: 20px;
+}
+
+.footer h4, .footer p{
+    display: none;
 }
